force-app/main/default/objects/A01_Store__c/A01_Store__c.object-meta.xml
<CustomObject>
    <label>A01_販売店情報</label>
    <nameField>
        <label>A01_販売店情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>