force-app/main/default/objects/A01_Store__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>アドレス</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>