force-app/main/default/objects/A01_Store__c/fields/OpenStatus__c.field-meta.xml
<CustomField>
    <fullName>OpenStatus__c</fullName>
    <label>開店状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業中</fullName>
            </value>
            <value>
                <fullName>閉店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>