force-app/main/default/objects/A01_Store__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>郵便番号</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>