force-app/main/default/objects/A01_Store__c/fields/PrefectureR__c.field-meta.xml
<CustomField>
    <fullName>PrefectureR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>都道府県</label>
    <referenceTo>A01_Prefecture__c</referenceTo>
    <relationshipLabel>A01_販売店情報</relationshipLabel>
    <relationshipName>A01</relationshipName>
    <type>Lookup</type>
</CustomField>