force-app/main/default/objects/A01_Store__c/fields/ProposalCost__c.field-meta.xml
<CustomField>
    <fullName>ProposalCost__c</fullName>
    <label>控除金</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>