force-app/main/default/objects/A01_Store__c/fields/StoreLevel__c.field-meta.xml
<CustomField>
    <fullName>StoreLevel__c</fullName>
    <label>ラベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一般店舗</fullName>
            </value>
            <value>
                <fullName>中級店舗</fullName>
            </value>
            <value>
                <fullName>上級店舗</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>