force-app/main/default/objects/A01_Store__c/fields/StoreManager__c.field-meta.xml
<CustomField>
    <fullName>StoreManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>店長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>A01</relationshipName>
    <type>Lookup</type>
</CustomField>