force-app/main/default/objects/A01_Store__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>店名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>