force-app/main/default/objects/A01_Store__c/fields/StoreNo__c.field-meta.xml
<CustomField>
    <fullName>StoreNo__c</fullName>
    <label>店番</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>