force-app/main/default/objects/A01_Store__c/recordTypes/Store_Record_Type_Approval.recordType-meta.xml
<RecordType>
    <fullName>Store_Record_Type_Approval</fullName>
    <active>true</active>
    <label>販売店レコードタイプ_承認者</label>
</RecordType>