force-app/main/default/objects/A01_Store__c/recordTypes/Store_Record_Type_Request.recordType-meta.xml
<RecordType>
    <fullName>Store_Record_Type_Request</fullName>
    <active>true</active>
    <label>販売店レコードタイプ_申請者</label>
</RecordType>